# iortcw

./: .gitignore  MESON.md  README.md  iortcw-cvars-new.txt  meson.build  meson_options.txt
MP/: meson.build
MP/code/client/: cl_main.c  client.h  libmumblelink.c  qal.h  snd_codec_opus.c
MP/code/game/: bg_lib.h
MP/code/qcommon/: files.c  q_shared.h  qcommon.h  qfiles.h
MP/code/rend2/: qgl.h  tr_extensions.c  tr_local.h
MP/code/renderer/: qgl.h
MP/code/sdl/: sdl_glimp.c  sdl_input.c  sdl_snd.c
MP/code/server/: sv_client.c
MP/code/splines/: q_splineshared.h
MP/code/sys/: sys_main.c
SP/: meson.build
SP/code/client/: cl_curl.c  cl_main.c  client.h
SP/code/qcommon/: files.c  net_ip.c  q_shared.h  qcommon.h  qfiles.h
SP/code/rend2/: qgl.h  tr_local.h
SP/code/renderer/: qgl.h
SP/code/sdl/: sdl_gamma.c
SP/code/splines/: q_splineshared.h
SP/code/sys/: sys_loadlib.h  sys_local.h  sys_main.c
SP/code/tools/: stringify.c
scripts/: install_sdl_runtime.py  meson_source_list.py
subprojects/: freetype2.wrap  openal-soft.wrap  opusfile.wrap  vorbis.wrap  zlib.wrap
subprojects/SDL3-3.4.0/: .meson-subproject-wrap-hash.txt
subprojects/curl-8.12.1/: .meson-subproject-wrap-hash.txt
subprojects/fmt-12.0.0/: .meson-subproject-wrap-hash.txt
subprojects/freetype-2.14.1/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/freetype-2.14.1-iortcw/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/libjpeg-turbo-3.1.3/: .meson-subproject-wrap-hash.txt
subprojects/libogg-1.3.6/: .meson-subproject-wrap-hash.txt
subprojects/libvorbis-1.3.7/: .meson-subproject-wrap-hash.txt  meson.build
subprojects/openal-soft-1.24.3/: .meson-subproject-wrap-hash.txt
subprojects/opus-1.6.1/: .meson-subproject-wrap-hash.txt
subprojects/packagecache/: freetype-2.14.1.tar.xz
subprojects/packagefiles/: vorbis-disable-tests.patch
subprojects/packagefiles/opusfile/: meson.build
subprojects/packagefiles/zlib/: meson.build
